# muell_bot

./: .gitignore  2018.csv  2019.csv  API.conf  API.conf.example  Cargo.toml  ci_update.sh  dates.csv  deploy.sh  loop.txt  muell_2018.csv  post-receive  termine.csv
dates/: 2021.csv  2022.csv  2023.csv  2024.csv  2025.csv
src/: dates.rs  id_list.rs  main.rs  reminder.rs
src/tgapi/: mod.rs  receive.rs  send.rs  types.rs
