[package]
name = "muell_bot"
version = "0.1.0"
authors = ["Michael Kreuzer <m-git@kreuzers.org>"]

[dependencies]
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1"
tokio-core = "0.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
iron = "0.6"
router = "0.6"
chrono = { version = "0.4", features = ["serde"]}