[package]
name = "muell_bot"
version = "1.0.5"
authors = ["Michael Kreuzer <m-git@kreuzers.org>"]
edition = "2021"

[dependencies]
reqwest = {version = "0.11", features = ["json", "blocking"]}
serde = "1"
serde_derive = "1"
serde_json = "1"
iron = "0.6"
router = "0.6"
chrono = { version = "0.4", features = ["serde"]}
