[package]
name = "muell_bot"
version = "2.0.0"
authors = ["Michael Kreuzer <m-git@kreuzers.org>"]
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
reqwest = { version = "0.12", features = ["json", "blocking"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
chrono = { version = "0.4", features = ["serde"]}
